--- a/app/repository.bower/angularjs-slider/demo/index.html
+++ b/app/repository.bower/angularjs-slider/demo/index.html
@@ -112,18 +112,26 @@
   </article>
 
   <article>
-    <h2>Slider with dynamic tick color</h2>
-    <rzslider
-      rz-slider-model="slider_tick_color.value"
-      rz-slider-options="slider_tick_color.options"
-    ></rzslider>
-  </article>
-
-  <article>
     <h2>Slider with custom floor/ceil/step</h2>
     <rzslider
       rz-slider-model="slider_floor_ceil.value"
       rz-slider-options="slider_floor_ceil.options"
+    ></rzslider>
+  </article>
+
+  <article>
+    <h2>Slider with logarithmic scale</h2>
+    <rzslider
+      rz-slider-model="slider_log.value"
+      rz-slider-options="slider_log.options"
+    ></rzslider>
+  </article>
+
+  <article>
+    <h2>Slider with custom scale</h2>
+    <rzslider
+      rz-slider-model="slider_custom_scale.value"
+      rz-slider-options="slider_custom_scale.options"
     ></rzslider>
   </article>
 
@@ -166,16 +174,6 @@
   </article>
 
   <article>
-    <h2>Slider with angular directive inside custom template</h2>
-    <rzslider
-            rz-slider-model="slider_custom_directive_inside_template.minValue"
-            rz-slider-high="slider_custom_directive_inside_template.maxValue"
-            rz-slider-options="slider_custom_directive_inside_template.options"
-            rz-slider-tpl-url="directiveInCustomTemplate.html"
-    ></rzslider>
-  </article>
-
-  <article>
     <h2>Slider with Alphabet</h2>
     Current letter: {{ slider_alphabet.value }}
     <rzslider
@@ -189,6 +187,14 @@
     <rzslider
       rz-slider-model="slider_ticks.value"
       rz-slider-options="slider_ticks.options"
+    ></rzslider>
+  </article>
+
+  <article>
+    <h2>Slider with ticks at specific positions</h2>
+    <rzslider
+      rz-slider-model="slider_ticks_array.value"
+      rz-slider-options="slider_ticks_array.options"
     ></rzslider>
   </article>
 
@@ -243,6 +249,22 @@
   </article>
 
   <article>
+    <h2>Slider with dynamic tick color</h2>
+    <rzslider
+      rz-slider-model="slider_tick_color.value"
+      rz-slider-options="slider_tick_color.options"
+    ></rzslider>
+  </article>
+
+  <article>
+    <h2>Slider with date values</h2>
+    <rzslider
+      rz-slider-model="slider_dates.value"
+      rz-slider-options="slider_dates.options"
+    ></rzslider>
+  </article>
+
+  <article>
     <h2>Slider with draggable range</h2>
     <rzslider
       rz-slider-model="slider_draggable_range.minValue"
@@ -290,7 +312,8 @@
     <h2>Disabled slider</h2>
     <label>Disabled <input type="checkbox" ng-model="disabled_slider.options.disabled"></label>
     <rzslider
-      rz-slider-model="disabled_slider.value"
+      rz-slider-model="disabled_slider.minValue"
+      rz-slider-high="disabled_slider.maxValue"
       rz-slider-options="disabled_slider.options"
     ></rzslider>
   </article>
@@ -328,14 +351,24 @@
     <h2>Sliders inside tabs</h2>
     <p>Price 1: {{tabSliders.slider1.value}}</p>
     <p>Price 2: {{tabSliders.slider2.value}}</p>
-    <tabset>
-      <tab heading="Slider 1" select="refreshSlider()">
+    <uib-tabset>
+      <uib-tab heading="Slider 1" select="refreshSlider()">
         <rzslider rz-slider-model="tabSliders.slider1.value"></rzslider>
-      </tab>
-      <tab heading="Slider 2" select="refreshSlider()">
+      </uib-tab>
+      <uib-tab heading="Slider 2" select="refreshSlider()">
         <rzslider rz-slider-model="tabSliders.slider2.value"></rzslider>
-      </tab>
-    </tabset>
+      </uib-tab>
+    </uib-tabset>
+  </article>
+
+  <article>
+    <h2>Slider with angular directive inside custom template</h2>
+    <rzslider
+      rz-slider-model="slider_custom_directive_inside_template.minValue"
+      rz-slider-high="slider_custom_directive_inside_template.maxValue"
+      rz-slider-options="slider_custom_directive_inside_template.options"
+      rz-slider-tpl-url="directiveInCustomTemplate.html"
+    ></rzslider>
   </article>
 
   <article>
